--- a/style/style.scss
+++ b/style/style.scss
@@ -64,6 +64,7 @@ body {
         }
 
         .logo {
+            cursor: pointer;
             span {
                 font-weight: 900;
                 font-size: 1.6rem;
