centraliza o texto de capa

--- a/style/style.scss
+++ b/style/style.scss
@@ -424,6 +424,7 @@ footer {
             font-weight: 200;
             font-size: 1rem !important;
             text-transform: uppercase;
+            text-align: center;
         }
     }
     main {
