--- a/style/style.css
+++ b/style/style.css
@@ -495,6 +495,7 @@ footer span {
     font-weight: 200;
     font-size: 1rem !important;
     text-transform: uppercase;
+    text-align: center;
   }
   main .conteudo-main {
     height: auto;
